--- a/package.json
+++ b/package.json
@@ -1,15 +1,14 @@
 {
   "name": "game_server",
-  "version": "0.14.12",
+  "version": "0.16.4",
   "description": "Игровой сервер общего назначения - обмен информацией между клиентами.",
   "main": "./src",
   "scripts": {
-    "dev": "nodemon --use-strict src --ignore tests",
-    "test": "jest --detectOpenHandles"
+    "dev": "nodemon --use-strict ./src/ dev"
   },
   "engines": {
     "node": "16.15.0",
-    "npm": "8.5.5"
+    "npm": "8.10.0"
   },
   "repository": {
     "type": "git",
@@ -18,19 +17,16 @@
   "author": "slavikse <slavikse@ya.ru>",
   "license": "MIT",
   "dependencies": {
-    "socket.io": "^4.5.0"
+    "socket.io": "^4.5.1"
   },
   "devDependencies": {
-    "@types/jest": "^27.5.0",
-    "@types/node": "^17.0.31",
+    "@types/node": "^17.0.42",
     "@types/socket.io": "^3.0.2",
-    "eslint": "^8.14.0",
+    "eslint": "^8.17.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^6.0.0",
-    "jest": "^28.0.3",
-    "nodemon": "^2.0.16",
-    "socket.io-client": "^4.5.0"
+    "nodemon": "^2.0.16"
   }
 }
